Add axios in register

--- a/src/assets/scss/argon.scss
+++ b/src/assets/scss/argon.scss
@@ -76,6 +76,7 @@
 @import "custom/card.scss";
 @import "custom/carousel.scss";
 @import "custom/close.scss";
+@import "custom/common.scss";
 @import "custom/custom-forms.scss";
 @import "custom/dropdown.scss";
 @import "custom/footer.scss";
